@@ -4,6 +4,7 @@
             "@timestamp": "2017-05-30T18:53:27.154Z",
             "context": {
                 "custom": {
+                    "(": "not a valid regex and that is fine",
                     "and_objects": {
                         "foo": [
                             "bar",
